--- a/src/stylus/base/initialize.styl
+++ b/src/stylus/base/initialize.styl
@@ -3,7 +3,7 @@
  * @author kaminoctem
  */
 
-/** Variables */
+/** variable */
 $base-common-forecolor ?= $color-white
 $base-common-font-family ?= $font-family-sans-serif
 $base-common-font-size ?= $font-size-root
@@ -43,7 +43,7 @@ $pre-padding ?= 1.25rem 1.5rem
 $pre-padding ?= 1.25rem 1.5rem
 $pre-code-font-size ?= 1em
 
-/** Styles */
+/** style */
 html
   background-color: $base-html-backcolor
   font-size: $base-common-font-size
