--- a/src/stylus/components/choice.styl
+++ b/src/stylus/components/choice.styl
@@ -3,13 +3,13 @@
  * @author kaminoctem
  */
 
-/** Variables */
+/** variable */
 $choices-backcolor ?= transparent
 $choice-normal-backcolor ?= alpha($colors['primary'], 0.7)
 $choice-hover-backcolor ?= lightness($choice-normal-backcolor, 30%)
 $choice-checked-backcolor ?= lightness($choice-normal-backcolor, 70%)
 
-/** Styles */
+/** style */
 .choices
   background-color: $choices-backcolor
   list-style: none
