--- a/src/stylus/elements/button.styl
+++ b/src/stylus/elements/button.styl
@@ -3,6 +3,7 @@
  * @author kaminoctem
  */
 
+/** variable */
 $button-forecolor ?= $color-grey-darker
 $button-backcolor ?= $color-white
 $button-bordercolor ?= $color-grey-lighter
@@ -27,6 +28,7 @@ $button-disabled-bordercolor ?= $color-grey-lighter
 $button-disabled-box-shadow ?= none
 $button-disabled-opacity ?= 0.5
 
+/** style */
 .button
   @extend.control
   background-color: $button-backcolor
