--- a/src/stylus/elements/control.styl
+++ b/src/stylus/elements/control.styl
@@ -3,6 +3,7 @@
  * @author kaminoctem
  */
 
+/** variable */
 $control-border-radius ?= 4px
 $control-border-radius-small ?= 2px
 $control-border-width ?= 1px
@@ -11,6 +12,7 @@ $control-line-height ?= 1.5
 $control-padding-vertical ?= (0.375em - $control-border-width)
 $control-padding-horizontal ?= (0.625em - $control-border-width)
 
+/** style */
 .control
   -moz-appearance: none
   -webkit-appearance: none
