--- a/src/stylus/elements/label.styl
+++ b/src/stylus/elements/label.styl
@@ -3,9 +3,11 @@
  * @author kaminoctem
  */
 
+/** style */
 $label-forecolor ?= $color-grey-darker
 $label-font-weight ?= $font-weight-bold
 
+/** variable */
 .label
   color: $label-forecolor
   display: block
