--- a/src/stylus/otogi.styl
+++ b/src/stylus/otogi.styl
@@ -1,15 +1,13 @@
-/*!! otogi.css v0.0.0 | MIT License | github.com/kaminoctem/otogi.css */
-/**
- * otogi.stylus
- * @author kaminoctem
- */
+/*!! otogi.css v0.0.1 | MIT License | github.com/kaminoctem/otogi.css */
 @charset "utf-8"
 
 @import "variables/_contents"
 @import "utils/_contents"
 @import "base/_contents"
+
 @import "elements/_contents"
 @import "forms/_contents"
 @import "components/_contents"
 @import "containers/_contents"
 @import "layouts/_contents"
+@import "animations/_contents"
