anime move to animation add effects

--- a/src/stylus/animations/fade.styl
+++ b/src/stylus/animations/fade.styl
@@ -3,7 +3,7 @@
  * @author kaminoctem
  */
 
-/** fadein */
+/** fade-in */
 .fade-in
   animation-name: fade-in
 
@@ -13,7 +13,7 @@
   100%
     opacity: 1
 
-/** fadeout */
+/** fade-out */
 .fade-out
   animation-name: fade-out
 
