--- a/src/stylus/otogi.styl
+++ b/src/stylus/otogi.styl
@@ -1,4 +1,4 @@
-/*!! otogi.css v0.0.1 | MIT License | github.com/kaminoctem/otogi.css */
+/*!! otogi.css v0.0.3 | MIT License | github.com/kaminoctem/otogi.css */
 @charset "utf-8"
 
 @import "variables/_contents"
@@ -11,3 +11,4 @@
 @import "containers/_contents"
 @import "layouts/_contents"
 @import "animations/_contents"
+@import "effects/_contents"
