--- a/src/stylus/animations/fade.styl
+++ b/src/stylus/animations/fade.styl
@@ -4,9 +4,11 @@
  */
 
 /** fade-in */
+/** style */
 .fade-in
   animation-name: fade-in
 
+/** keyframes */
 @keyframes fade-in
   0%
     opacity: 0
@@ -14,9 +16,11 @@
     opacity: 1
 
 /** fade-out */
+/** style */
 .fade-out
   animation-name: fade-out
 
+/** keyframes */
 @keyframes fade-out
   0%
     opacity: 1
