--- a/src/stylus/components/character.styl
+++ b/src/stylus/components/character.styl
@@ -17,8 +17,8 @@
   top: 0%
   width: 100%
 
-.character-image
-  height: 100%
-  max-height: unset
-  max-width: unset
-  width: 100%
+  &-image
+    height: 100%
+    max-height: unset
+    max-width: unset
+    width: 100%
