--- a/src/stylus/components/messagewindow.styl
+++ b/src/stylus/components/messagewindow.styl
@@ -16,7 +16,7 @@ $messagewindow-footer-font-weight ?= $font-weight-normal
 $messagewindow-container-width ?= 90%
 
 /** style */
-.messagelayer
+.messagewindowlayer
   display: block
   margin: 0
   height: 100%
@@ -80,6 +80,7 @@ $messagewindow-container-width ?= 90%
   &.is-fullheight
     height: 100%
     top: 0px
+
   &.is-fullheight-with-margin
     height: 90%
     top: 0px
