--- a/src/stylus/components/background.styl
+++ b/src/stylus/components/background.styl
@@ -14,6 +14,6 @@
   min-height: 100%
   min-width: 100%
 
-.background-image
-  min-height: 100%
-  min-width: 100%
+  &-image
+    min-height: 100%
+    min-width: 100%
