--- a/src/stylus/components/choice.styl
+++ b/src/stylus/components/choice.styl
@@ -22,14 +22,17 @@ $choice-checked-backcolor ?= lightness($choice-normal-backcolor, 70%)
   margin: 0.5em 0
   width: 100%;
 
-  &>button,[type="button"],[type="submit"],[type="reset"]
+  &>a,button,[type="button"],[type="submit"],[type="reset"]
     background-color: $choice-normal-backcolor
+    display: block
     height: auto
     text-align: left
     padding: 0.75em
     width: 100%
     &:hover
       background-color: $choice-hover-backcolor
+  &>a
+    width: unset
 
   &>[type="radio"]
     display: none
