--- a/src/stylus/base/helpers.styl
+++ b/src/stylus/base/helpers.styl
@@ -81,6 +81,7 @@ for num in (0..400)
   .width-{num}
     width: 1% * num !important
 
+/** coordinate */
 for num in (0..100)
   .top-{num},.top-plus-{num},.y-{num},.y-plus-{num}
     top: 1% * num !important
